openmediavault (0.5.34) stable; urgency=low

  * Add environment variable OMV_PLUGIN_ENUMERATE_GET_REPOSITORY. Set to TRUE
    to determine the repository of the plugin. Because this process is time
    consuming this defaults to FALSE.
  * Mantis 0000867: Cache for System -> Plugins.
  * Mantis 0000917: Followup to 913 plugin error.
  * Mantis 0000967: Convert fstab mkconf to use run-parts.
  * Mantis 0000973: Fix issue in OMVFilesystem to get correct filesystem
    statistics.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 02 Feb 2014 20:33:58 +0100

openmediavault (0.5.33) stable; urgency=low

  * Update locales.
  * Mantis 0000969: Sortable Columns do not work everywhere in the WebGUI.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 01 Feb 2014 21:42:49 +0100

openmediavault (0.5.32) stable; urgency=low

  * Update locales.
  * Fix and improve various issues.
  * Add environment variable OMV_USERMGMT_ENUMERATE_USER_ROOT. Set to FALSE in
    /etc/default/openmediavault to do not list the user 'root' in the WebGUI.
    Defaults to TRUE.
  * Display rootfs in 'Diagnostics | System Information | Status | Disk usage'.
  * Improve code to move grid rows via up/down toolbar buttons.
  * Simplify code to create the RRD graphs. Thanks to Solo0815 for the hint.
  * Add UDEV rule to set 'noop' scheduler for non-rotating devices.
  * Set sysctl vm.* values to reduce disk I/O for non-rotating devices.
    This is done in a system post-install script.
  * Mantis 0000956: Make home page text in Plugins a hyperlink.
  * Mantis 0000960: Numerical Usernames do not shop up in webinterface.
  * Mantis 0000964: Fix bug in IP net addr regular expression.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Jan 2014 12:02:18 +0100

openmediavault (0.5.31) stable; urgency=low

  * Update locales.
  * Fix bug in WebGUI class OMV.window.Upload.
  * Mantis 0000949: IPv6 firewall - fix ICMP issue.