@@ -376,22 +376,14 @@ Ext.define("OMV.module.admin.system.plugin.Plugins", {
 						close: function() {
 							Ext.MessageBox.show({
 								title: _("Information"),
-								msg: _("Please reload the page to let the changes take effect."),
+								msg: _("The page will reload now to let the changes take effect."),
 								modal: true,
 								icon: Ext.MessageBox.INFO,
-								buttons: Ext.MessageBox.OKCANCEL,
-								buttonText: {
-									ok: _("OK"),
-									cancel: _("Reload")
-								},
-								fn: function(answer) {
-									if("cancel" == answer) {
-										// Reload the page.
-										OMV.confirmPageUnload = false;
-										document.location.reload();
-									} else {
-										me.doReload();
-									}
+								buttons: Ext.MessageBox.OK,
+								fn: function() {
+									// Reload the page.
+									OMV.confirmPageUnload = false;
+									document.location.reload();
 								}
 							});
 						}
@@ -441,22 +433,14 @@ Ext.define("OMV.module.admin.system.plugin.Plugins", {
 						close: function() {
 							Ext.MessageBox.show({
 								title: _("Information"),
-								msg: _("Please reload the page to let the changes take effect."),
+								msg: _("The page will reload now to let the changes take effect."),
 								modal: true,
 								icon: Ext.MessageBox.INFO,
-								buttons: Ext.MessageBox.OKCANCEL,
-								buttonText: {
-									ok: _("OK"),
-									cancel: _("Reload")
-								},
-								fn: function(answer) {
-									if("cancel" == answer) {
-										// Reload the page.
-										OMV.confirmPageUnload = false;
-										document.location.reload();
-									} else {
-										me.doReload();
-									}
+								buttons: Ext.MessageBox.OK,
+								fn: function() {
+									// Reload the page.
+									OMV.confirmPageUnload = false;
+									document.location.reload();
 								}
 							});
 						},
